--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:20.7.0-alpine
 WORKDIR /app
-COPY ./app/package.json ./
+COPY ./* .
 RUN  npm install
+COPY . .
 EXPOSE 8080
 CMD ["npm", "run", "dev"]
 
