--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:20.7.0-alpine
 WORKDIR /app
-COPY ./* .
+COPY package*.json ./
 RUN  npm install
 COPY . .
-EXPOSE 8080
+EXPOSE 5173
 CMD ["npm", "run", "dev"]
 
